# ManifeST

./: .gitignore  BUGS.md  CLAUDE.md  CMakeLists.txt  INSTRUCTIONS.md  LICENSE  README.md  ROADMAP.md  improvements.md
data/: menu_disk_contents.json
packaging/: build-appimage.sh  manifest.desktop
src/: CrackerGroupDetector.cpp  DatImporter.cpp  Database.cpp  DiskReader.cpp  Exporter.cpp  GameStringScanner.cpp  HatariLauncher.cpp  Identifier.cpp  MenuDiskCatalog.cpp  MenuImporter.cpp  MetadataExtractor.cpp  MultiDiskDetector.cpp  QueryCLI.cpp  Scanner.cpp  ScreenScraperCache.cpp  main.cpp
src/cli/: QueryCLI.cpp
src/gui/: DiskTableModel.cpp  FilterProxy.cpp  MainWindow.cpp
tests/: CMakeLists.txt  test_database.cpp  test_identifier.cpp  test_metadata.cpp
